--- a/King_s_chariot.ioc
+++ b/King_s_chariot.ioc
@@ -113,20 +113,24 @@ PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=DJ1_TIM1
 PA9.Signal=S_TIM1_CH2
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_Speed,GPIO_Label
 PB12.GPIO_Label=SS
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB12.Locked=true
 PB12.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Label
+PB13.GPIOParameters=GPIO_Speed,GPIO_Label
 PB13.GPIO_Label=SCK
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB13.Locked=true
 PB13.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_Speed,GPIO_Label
 PB14.GPIO_Label=MOSI
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB15.GPIO_Label=MISO
+PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
 PB15.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
@@ -153,7 +157,7 @@ PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=-90
+PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerLinker=GCC
@@ -229,7 +233,8 @@ TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler
 TIM2.Prescaler=71
-TIM3.IPParameters=Prescaler
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=20000
 TIM3.Prescaler=71
 TIM4.IPParameters=Prescaler
 TIM4.Prescaler=71
